# redis-vl-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PARITY_MATRIX.md  PUBLISHING.md  README.md  SECURITY.md  deny.toml
.github/workflows/: bench.yml  ci.yml  docs.yml  publish.yml  release-binaries.yml  release-plz.yml  security.yml
.intent/: .gitignore  config.json
benches/: README.md  compare.sh
benches/python/: bench_core.py  bench_harness.py  bench_redis.py  compare_report.py  requirements.txt
crates/redis-vl/: Cargo.toml
crates/redis-vl/benches/: README.md  core_benchmarks.rs  redis_benchmarks.rs
crates/redis-vl/examples/: filter_basics.rs  message_history_basics.rs  schema_basics.rs  semantic_cache_basics.rs  semantic_router_basics.rs  sql_query_basics.rs  vector_search.rs
crates/redis-vl/src/: error.rs  filter.rs  index.rs  lib.rs  query.rs  schema.rs
crates/redis-vl/src/extensions/: cache.rs  history.rs  mod.rs  router.rs
crates/redis-vl/src/query/: sql.rs
crates/redis-vl/src/rerankers/: cohere.rs  mod.rs
crates/redis-vl/src/vectorizers/: anthropic.rs  azure_openai.rs  bedrock.rs  cohere.rs  hf_local.rs  mistral.rs  mod.rs  vertex_ai.rs  voyageai.rs
crates/redis-vl/tests/: python_parity_async_search_index.rs  python_parity_embedcache.rs  python_parity_hybrid_aggregate.rs  python_parity_message_history.rs  python_parity_message_history_roles.rs  python_parity_multi_prefix.rs  python_parity_search_index.rs  python_parity_semantic_cache.rs  python_parity_semantic_message_history.rs  python_parity_semantic_router.rs  python_parity_sql_hash.rs  python_parity_sql_json.rs
crates/rvl/: Cargo.toml
crates/rvl/src/: main.rs
crates/rvl/tests/: cli_smoke.rs
docs/: book.toml
docs/book/: 404.html  api-reference.html  benchmarks.html  cli.html  extensions.html  getting-started.html  index.html  print.html  queries-and-filters.html  redis-84.html  rerankers.html  schema.html  search-index.html  searcher-c2a407aa.js  searchindex-04e0cd9d.js  searchindex-32fa4c17.js  toc-61f2a8d6.js  toc.html  vectorizers.html
docs/src/: SUMMARY.md  api-reference.md  benchmarks.md  cli.md  extensions.md  getting-started.md  index.md  queries-and-filters.md  redis-84.md  rerankers.md  schema.md  search-index.md  vectorizers.md
examples/: README.md
