[workspace]
members = ["crates/redis-vl", "crates/rvl"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/redis/redis-vl-rs"
homepage = "https://github.com/redis/redis-vl-rs"
documentation = "https://docs.rs/redis-vl"
rust-version = "1.85"
version = "0.1.0"
authors = ["RedisVL Rust Contributors"]

[workspace.dependencies]
anstream = "1.0.0"
async-trait = "0.1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-bedrockruntime = "1"
base64 = "0.22"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
comfy-table = "7"
indexmap = { version = "2", features = ["serde"] }
redis = { version = "1.1.0", features = ["aio", "json", "tokio-comp"] }
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "json", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.11.0"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
ulid = { version = "1", features = ["serde"] }
url = "2.5"

[workspace.lints.rust]
missing_docs = "deny"

[workspace.lints.clippy]
all = "warn"
cargo = "warn"
pedantic = "warn"
