[package]
name = "redis-vl"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Rust implementation of Redis Vector Library"
readme = "../../README.md"
keywords = ["redis", "vector-search", "ai", "rag"]
categories = ["database", "api-bindings"]

[dependencies]
async-trait.workspace = true
base64.workspace = true
bytes.workspace = true
chrono.workspace = true
indexmap.workspace = true
redis.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
ulid.workspace = true
url.workspace = true

[features]
default = ["openai", "litellm"]
openai = []
litellm = ["openai"]
azure-openai = ["openai"]
cohere = []
vertex-ai = []
anthropic = []
voyageai = []
mistral = []
bedrock = []
hf-local = []
sql = []
rerankers = []

[lints]
workspace = true

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }

[[bench]]
name = "core_benchmarks"
harness = false
