[package]
name = "rvl"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/rvl"
rust-version.workspace = true
authors.workspace = true
description = "CLI for the Rust Redis Vector Library"
readme = "../../README.md"
keywords = ["redis", "vector-search", "cli"]
categories = ["command-line-utilities", "database"]

[dependencies]
anstream.workspace = true
anyhow = "1.0.102"
clap.workspace = true
comfy-table.workspace = true
redis-vl = { version = "0.1.2", path = "../redis-vl" }
serde_json.workspace = true

[lints]
workspace = true
